--- a/ivy.xml
+++ b/ivy.xml
@@ -12,11 +12,11 @@
 <ivy-module version="2.0"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:noNamespaceSchemaLocation="http://ant.apache.org/ivy/schemas/ivy.xsd">
-	<info organisation="com.infostretch" module="qaf-qmetry-updator" status="integration">
+	<info organisation="com.qmetry" module="qaf-qmetry-updator" status="integration">
 	</info>
 
 	<dependencies>
-		<dependency org="com.infostretch" name="qaf" rev="2.1.7b" />
+		<dependency org="com.qmetry" name="qaf" rev="latest.integration" />
 		
 		<!-- QMETRY -->
 		<dependency org="org.apache.axis" name="axis" rev="1.4" />
