--- a/ivy.xml
+++ b/ivy.xml
@@ -1,26 +1,14 @@
 <?xml version="1.0" encoding="ISO-8859-1"?>
-<!--
- QMetry Automation Framework provides a powerful and versatile platform to author
- Automated Test Cases in Behavior Driven, Keyword Driven or Code Driven approach
- 
- Copyright 2016 Infostretch Corporation
- 
- This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or any later version.
- 
- This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
- 
- IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR
- OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT
- OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE
- 
- You should have received a copy of the GNU General Public License along with this program in the name of LICENSE.txt in the root folder of the distribution. If not, see https://opensource.org/licenses/gpl-3.0.html
- 
- See the NOTICE.TXT file in root folder of this source files distribution
- for additional information regarding copyright ownership and licenses
- of other open source software / files used by QMetry Automation Framework.
- 
- For any inquiry or need additional information, please contact support-qaf@infostretch.com
- -->
+<!-- Licensed to the Apache Software Foundation (ASF) under one or more contributor 
+	license agreements. See the NOTICE file distributed with this work for additional 
+	information regarding copyright ownership. The ASF licenses this file to 
+	you under the Apache License, Version 2.0 (the "License"); you may not use 
+	this file except in compliance with the License. You may obtain a copy of 
+	the License at http://www.apache.org/licenses/LICENSE-2.0 Unless required 
+	by applicable law or agreed to in writing, software distributed under the 
+	License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS 
+	OF ANY KIND, either express or implied. See the License for the specific 
+	language governing permissions and limitations under the License. -->
 <ivy-module version="2.0"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:noNamespaceSchemaLocation="http://ant.apache.org/ivy/schemas/ivy.xsd">
@@ -29,6 +17,8 @@
 
 	<dependencies>
 		<dependency org="com.qmetry" name="qaf" rev="latest.integration" />
+		<dependency org="com.qmetry" name="qaf-support" rev="latest.integration" />
+		
 		
 		<!-- QMETRY -->
 		<dependency org="org.apache.axis" name="axis" rev="1.4" />
@@ -52,9 +42,6 @@
 		<dependency org="commons-io" name="commons-io" rev="2.4"/>
 		<dependency org="com.google.code.gson" name="gson" rev="2.1">
 			<artifact name="gson" type="jar"></artifact>
-		</dependency>
-		<dependency org="org.testng" name="testng" rev="6.8.5">
-			<artifact name="testng" type="jar"></artifact>
 		</dependency>
 		<dependency org="org.apache.httpcomponents" name="httpclient"
 			rev="4.4.1"></dependency>
