--- a/build.properties
+++ b/build.properties
@@ -20,20 +20,16 @@
 #
 # For any inquiry or need additional information, please contact support-qaf@infostretch.com
 #******************************************************************************
-version-num=2.1
-build-num=7.1b
-lib.dir=lib
-dist.dir=dist
-meta.dir=META-INF
-src.dir=src
-bin.dir=bin
-source=1.7
-target=1.7
-dist.file.name=qaf-qmetry-updator
+
+version-num=1.0
+build-num=1
+release.num=${version-num}.${build-num}
+lib.dir=./lib
+dist.dir=build/artifacts/jars/
+#./releases/${version-num}.${build-num}
+
 # here is the version of ivy we will use. change this property to try a newer version if you want
-ivy.install.version=2.3.0
+ivy.install.version=2.4.0
 ivy.jar.dir=${ant.library.dir}
 ivy.jar.file=${ivy.jar.dir}/ivy.jar
-
-#skip.download=false
-gen.doc=false
+skip.download=true
