--- a/build.xml
+++ b/build.xml
@@ -23,7 +23,7 @@ For any inquiry or need additional information, please contact support-qaf@infos
 
 -->
 
-<project basedir="." default="build" name="SeleniumAutomationFramework" xmlns:ivy="antlib:org.apache.ivy.ant">
+<project basedir="." default="build" name="QMetryAutomationFramework" xmlns:ivy="antlib:org.apache.ivy.ant">
 
 
 	<!-- Sets the DSTAMP, TSTAMP, and TODAY properties in the current project -->
@@ -31,9 +31,15 @@ For any inquiry or need additional information, please contact support-qaf@infos
 		<format property="build.timestamp" pattern="dd-MMM-yyyy HH:mm:ss" />
 	</tstamp>
 
-	<property file="build.properties" />
+	<property name="bin.dir" value="${basedir}/bin" />
+	<property name="src.dir" value="${basedir}/src" />
+	<property name="meta.dir" value="${basedir}/META-INF" />
 	<property name="test.dir" value="${basedir}/test" />
-	<property name="test.src.dir" value="${test.dir}/src" />
+<property name="test.src.dir" value="${test.dir}/src" />
+	<property name="debuglevel" value="source,lines,vars" />
+	<property name="target" value="1.6" />
+	<property name="source" value="1.6" />
+	<property file="build.properties" />
 
 	<path id="build.classpath">
 		<fileset dir="${lib.dir}">
@@ -41,13 +47,13 @@ For any inquiry or need additional information, please contact support-qaf@infos
 			<include name="**/*.jar" />
 		</fileset>
 	</path>
-	<path id="test.classpath">
+<path id="test.classpath">
 		<fileset dir="${dist.dir}">
 			<include name="*.jar" />
 			<include name="**/*.jar" />
 		</fileset>
 		<path refid="build.classpath" />
-	</path>
+</path>
 	<!-- IVY -->
 	<target name="download-ivy" unless="skip.download">
 		<mkdir dir="${ivy.jar.dir}" />
@@ -56,87 +62,164 @@ For any inquiry or need additional information, please contact support-qaf@infos
 		<echo message="installing ivy..." />
 		<get src="http://repo1.maven.org/maven2/org/apache/ivy/ivy/${ivy.install.version}/ivy-${ivy.install.version}.jar" dest="${ivy.jar.file}" usetimestamp="true" />
 	</target>
-
-	<!-- ================================= target: install-ivy ================================= -->
+	<!-- ================================= target: install-ivy this target is 
+		not necessary if you put ivy.jar in your ant lib directory if you already 
+		have ivy in your ant lib, you can simply remove this target and the dependency 
+		the 'go' target has on it ================================= -->
 	<target name="install-ivy" depends="download-ivy" description="--> install ivy">
+		<!-- try to load ivy here from local ivy dir, in case the user has not 
+			already dropped it into ant's lib dir (note that the latter copy will always 
+			take precedence). We will not fail as long as local lib dir exists (it may 
+			be empty) and ivy is in at least one of ant's lib dir or the local lib dir. -->
 		<path id="ivy.lib.path">
 			<fileset dir="${ivy.jar.dir}" includes="*.jar" />
 		</path>
 		<taskdef resource="org/apache/ivy/ant/antlib.xml" uri="antlib:org.apache.ivy.ant" classpathref="ivy.lib.path" />
+
 	</target>
 
 	<!-- ================================= target: resolve ================================= -->
 	<target name="resolve" description="--> retrieve dependencies with ivy" depends="install-ivy">
+
+
 		<ivy:resolve file="ivy.xml" />
 		<ivy:cachepath pathid="lib.path.id" />
+
 		<ivy:addpath topath="build.classpath">
 			<path refid="lib.path.id" />
 		</ivy:addpath>
 	</target>
 
-	<!-- ================================= target: init ================================= -->
 	<target name="init" depends="resolve">
 		<mkdir dir="${bin.dir}" />
+		<mkdir dir="${dist.dir}" />
 		<copy includeemptydirs="false" todir="${bin.dir}">
 			<fileset dir="${src.dir}">
+				<exclude name="**/*.ucls" />
 				<exclude name="**/*.java" />
 			</fileset>
 		</copy>
 	</target>
-
-	<!-- ================================= target: clean ================================= -->
 	<target name="clean">
 		<delete dir="${bin.dir}" failonerror="false" />
 		<delete dir="${dist.dir}" failonerror="false" />
 	</target>
 
-	<!-- ================================= target: compile ================================= -->
-	<target name="compile" depends="init">
+
+
+	<target depends="init" name="compile">
+		<taskdef classpathref="build.classpath" resource="org/aspectj/tools/ant/taskdefs/aspectjTaskdefs.properties" />
+
 		<echo level="info">--- compile (start) ---</echo>
-		<javac srcdir="${src.dir}" destdir="${bin.dir}" classpathref="build.classpath" debug="false" source="${source}" target="${target}" />
+		<iajc source="${source}" target="${target}" showweaveinfo="true" verbose="true" destdir="${bin.dir}" debug="false" aspectpathref="build.classpath">
+			<inpath>
+				<pathelement location="${src.dir}" />
+			</inpath>
+			<sourceroots>
+				<pathelement location="${src.dir}" />
+			</sourceroots>
+			<classpath refid="build.classpath">
+			</classpath>
+		</iajc>
 		<echo level="info">--- compile (finished) ---</echo>
 	</target>
-
 	<!-- ================================= target: build ================================= -->
-	<target name="build" depends="clean,compile" description="build jar">
+	<target name="build" depends="make-jar, gendoc, gensource" description="build framework, generate docs">
+
+
+	</target>
+
+
+	<target name="make-jar" depends="clean, compile" description="build basic version">
+
 		<mkdir dir="${dist.dir}" />
-		<jar destfile="${dist.dir}/${dist.file.name}.jar" basedir="${bin.dir}">
+		<jar destfile="${dist.dir}/qaf-qmetry-updator.jar" basedir="${bin.dir}">
+			<metainf dir="." includes="LICENSE.txt" />
+			<metainf dir="." includes="${dist.dir}/pom.xml,${dist.dir}/pom.properties" />
+
 			<manifest>
 				<attribute name="Vendor" value="Infostretch Corp." />
 				<attribute name="Built-By" value="${user.name}" />
+
 				<section name="Build-Info">
-					<attribute name="Build-Time" value="${build.timestamp}" />
-					<attribute name="Version" value="${version-num}" />
-					<attribute name="Revision" value="${build-num}" />
+					<attribute name="qaf-Build-Time" value="${build.timestamp}" />
+					<!-- Information about the program itself -->
+					<attribute name="qaf-Version" value="${version-num}" />
+					<attribute name="qaf-Revision" value="${build-num}" />
+					<attribute name="qaf-Type" value="qmetry-updator" />
+				</section>
+			</manifest>
+		</jar>
+
+
+
+	</target>
+
+
+	<target name="gendoc" depends="init" description="generate documentation">
+		<delete dir="${dist.dir}/docs" />
+
+		<mkdir dir="${dist.dir}/docs" />
+		<javadoc sourcepath="${src.dir}" destdir="${dist.dir}/docs" />
+		<jar compress="true" destfile="${dist.dir}/qaf-qmetry-updator-javadoc.jar" basedir="${dist.dir}/docs" />
+		<delete dir="${dist.dir}/docs">
+		</delete>
+	</target>
+	<target name="gensource" description="Generate Source" depends="init">
+		<jar destfile="${dist.dir}/qaf-qmetry-updator-sources.jar" basedir="${src.dir}">
+			<metainf dir="." includes="LICENSE" />
+			<manifest>
+				<attribute name="Vendor" value="Infostretch Corp." />
+				<attribute name="Built-By" value="${user.name}" />
+
+				<section name="Build-Info">
+					<attribute name="qaf-Build-Time" value="${build.timestamp}" />
+					<!-- Information about the program itself -->
+					<attribute name="qaf-Version" value="${version-num}" />
+					<attribute name="qaf-Revision" value="${build-num}" />
+					<attribute name="qaf-Type" value="qmetry-updator" />
 				</section>
 			</manifest>
 		</jar>
 	</target>
-	<target name="make-jar" depends="clean, compile" description="build basic version">
 
-		<mkdir dir="${dist.dir}" />
-		<!-- All - core + testNG + step -->
-		<jar destfile="${dist.dir}/qaf-qmetry-updator.jar" basedir="${bin.dir}" excludes="**/test/**" includes="**/*.*">
-			<metainf dir="." includes="LICENSE.txt,NOTICE.txt" />
-			<manifest>
-				<attribute name="Vendor" value="Infostretch Corp." />
-				<attribute name="Built-By" value="${user.name}" />
-			</manifest>
-			<metainf dir="${src.dir}" includes="**/aop.xml" />
-			<service type="org.testng.ITestNGListener">
-				<provider classname="com.qmetry.qaf.automation.testng.pro.QAFAnnotationTransformer2" />
+	<target name="publish2" depends="init, build">
+		<!-- Determine build number from previously published revisions -->
+		<ivy:buildnumber resolver="local-m2-publish" organisation="${ivy.organisation}" module="${ivy.module}" revision="${release.num}" />
 
-				<provider classname="com.qmetry.qaf.automation.testng.pro.QAFInvokedMethodListener2" />
+		<!-- Resolve ivy dependencies and create a Maven POM file -->
+		<ivy:deliver deliverpattern="${dist.dir}/ivy.xml" pubrevision="${release.num}" status="release" />
+		<ivy:makepom ivyfile="${dist.dir}/ivy.xml" pomfile="${dist.dir}/qaf-qmetry-updator.pom" />
 
-				<provider classname="com.qmetry.qaf.automation.testng.pro.QAFMethodInterceptor" />
-
-				<provider classname="com.qmetry.qaf.automation.testng.pro.QAFResultListener" />
-				<provider classname="com.qmetry.qaf.automation.testng.pro.QAFSuiteListener" />
-			</service>
-		</jar>
+		<!-- Publish the local repo. Defaults to ~/.ivy2/local -->
+		<ivy:publish resolver="local-m2-publish" forcedeliver="true" publishivy="true" pubrevision="${release.num}" overwrite="true">
+			<artifacts pattern="${dist.dir}/[artifact].[ext]" />
+			<artifact name="qaf-qmetry-updator" pattern="${dist.dir}/[artifact].[ext]" ext="pom" type="pom" />
+			<artifact name="qaf-qmetry-updator-sources" pattern="${dist.dir}/[artifact].[ext]" ext="jar" type="source" />
+			<artifact name="qaf-qmetry-updator-javadoc" pattern="${dist.dir}/[artifact].[ext]" ext="zip" type="javadoc" />
+		</ivy:publish>
 
 	</target>
-	<target name="test-compile" depends="init">
+
+	<target name="publish" depends="init, build">
+		<!-- Determine build number from previously published revisions -->
+		<ivy:buildnumber resolver="local-m2-publish" organisation="${ivy.organisation}" module="${ivy.module}" revision="${release.num}" />
+
+		<!-- Resolve ivy dependencies and create a Maven POM file -->
+		<ivy:deliver deliverpattern="${dist.dir}/ivy.xml" pubrevision="${release.num}" status="release" />
+		<ivy:makepom ivyfile="${dist.dir}/ivy.xml" pomfile="${dist.dir}/qaf-qmetry-updator.pom">
+			<mapping conf="*,default" scope="compile" />
+		</ivy:makepom>
+
+		<!-- Publish the local repo. Defaults to ~/.ivy2/local -->
+		<ivy:publish resolver="local-m2-publish" forcedeliver="true" publishivy="true" pubrevision="${release.num}" overwrite="true">
+			<artifacts pattern="${dist.dir}/[artifact].[ext]" />
+			<artifact name="qaf-qmetry-updator" pattern="${dist.dir}/[artifact].[ext]" ext="pom" type="pom" version="${release.num}" />
+			<artifact name="qaf-qmetry-updator-sources" pattern="${dist.dir}/[artifact].[ext]" ext="jar" classifier="sources" type="sources" version="${release.num}" />
+			<artifact name="qaf-qmetry-updator-javadoc" pattern="${dist.dir}/[artifact].[ext]" ext="jar" classifier="javadoc" type="javadoc" version="${release.num}" />
+		</ivy:publish>
+	</target>
+<target name="test-compile" depends="init">
 		<taskdef classpathref="test.classpath" resource="org/aspectj/tools/ant/taskdefs/aspectjTaskdefs.properties" />
 
 		<echo level="info">--- test compile (start) ---</echo>
@@ -150,8 +233,7 @@ For any inquiry or need additional information, please contact support-qaf@infos
 			</classpath>
 		</iajc>
 		<echo level="info">--- test compile (finished) ---</echo>
-	</target>
-
+</target>
 	<target name="runtest" depends="make-jar,test-compile">
 		<taskdef resource="testngtasks" classpathref="test.classpath" />
 		<testng classpathref="test.classpath" workingDir="${test.dir}" outputDir="${test.dir}/test-results" haltOnFailure="true" verbose="2">
