added QMetry7 version updator and schedule filter classes

--- a/build.properties
+++ b/build.properties
@@ -22,7 +22,7 @@
 #******************************************************************************
 
 version-num=2.1
-build-num=11-RC1
+build-num=12
 release.num=${version-num}.${build-num}
 lib.dir=./lib
 dist.dir=build/artifacts/jars/
